<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="15dp"
    tools:context="lab.fk.anappoficeandfire.display.DisplayActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:text="@string/lbl_filter_data_type_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Spinner
                android:id="@+id/spn_data_type_display"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <Button
            android:id="@+id/btn_query_data_display"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="#CCCCDD"
            android:layout_marginBottom="20dp"
            android:textColor="@color/colorPrimary"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:text="@string/btn_query_data_display"/>
    </LinearLayout>
    <ScrollView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <LinearLayout
            android:orientation="vertical"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/lyt_wrapper_name_display"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:text="@string/lbl_filter_name_display"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="label"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:tag="controller"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/lyt_wrapper_release_display"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:text="@string/lbl_filter_release_display"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        tools:text="teste"
                        android:textStyle="bold"
                        android:tag="controller"/>
                    <Button
                        android:id="@+id/btn_choose_date_filter_display"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_choose_date_filter_display"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/lyt_wrapper_title_display"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:text="@string/lbl_filter_title_display"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:tag="controller"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/lyt_wrapper_alias_display"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:text="@string/lbl_filter_alias_display"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:tag="controller"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/lyt_wrapper_words_display"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:text="@string/lbl_filter_words_display"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:tag="controller"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/lyt_wrapper_region_display"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:text="@string/lbl_filter_region_display"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="label"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:tag="controller"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
